cmake_minimum_required(VERSION 3.18)
Project(mtrng C CXX Fortran)

IF(NOT CMAKE_VERSION VERSION_LESS "3.2")
    SET(CMAKE_CXX_STANDARD 11)
ELSE()
    MESSAGE(STATUS "Checking Compiler Flags")
    INCLUDE(CheckCXXCompilerFlag)
    check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
    check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
    if(COMPILER_SUPPORTS_CXX11)
        message(STATUS "C++11 is supported.")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    elseif(COMPILER_SUPPORTS_CXX0X)
        message(STATUS "C++0x is supported.")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
    endif()
ENDIF()

add_library(mtrng random.cc Random.F90)
set_property(TARGET mtrng PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET mtrng PROPERTY LINKER_LANGUAGE CXX)
