add_executable(1-get-MatFull 1-get-MatFull.F90)
add_executable(2-time-evolve-in-eigenbasis 2-time-evolve-in-eigenbasis.F90)
add_executable(3-operator-list-stress-test 3-operator-list-stress-test.F90)
set (ctqmctests 1-get-MatFull 2-time-evolve-in-eigenbasis 3-operator-list-stress-test)

foreach(iter ${ctqmctests})
set_target_properties(${iter} PROPERTIES LINKER_LANGUAGE Fortran)
target_link_libraries(${iter} CTQMCLIB)
target_link_libraries(${iter} mtrng)
target_link_libraries(${iter} ${LAPACK_LIBRARIES})
target_link_libraries(${iter} ${NFFT_LIBRARIES})
endforeach(iter)

enable_testing()
add_test(1-get-MatFull 1-get-MatFull)
add_test(2-time-evolve-in-eigenbasis 2-time-evolve-in-eigenbasis)
add_test(3-operator-list-stress-test 3-operator-list-stress-test)
